--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 
     <input type="file" id="imageUpload" accept="image/*" />
     
-    <div class="controls">
-      <label for="zoom">Zoom:</label>
-      <input type="range" id="zoom" min="1" max="5" step="0.1" value="1">
-      <button id="selectMode">Pick Pixel Area</button>
-      <button id="makeTransparent">Make Transparent</button>
-      <button id="downloadBtn">Download Result</button>
-    </div>
+<div class="controls">
+  <label for="zoom">Zoom:</label>
+  <input type="range" id="zoom" min="1" max="5" step="0.1" value="1">
+
+  <button id="selectMode">Pick Pixel Area</button>
+  <button id="makeTransparent">Make Transparent</button>
+
+  <button id="eraserMode">Eraser Mode</button>
+  <label for="eraserSize">Eraser Size:</label>
+  <input type="range" id="eraserSize" min="1" max="50" value="10">
+
+  <button id="downloadBtn">Download Result</button>
+</div>
 
     <div class="canvas-section">
       <div>
